--- a/.github/workflows/bot-CD.yml
+++ b/.github/workflows/bot-CD.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Write SSH Key to File
       run: |
-        echo "${{ secrets.EC2_SSH_KEY }}" > ec2_key.pem
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ec2_key.pem
         chmod 600 ec2_key.pem
 
     - name: Pull changes on EC2
